--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<app-login></app-login>
+<div id="container">
+  <app-login></app-login>
+  <app-footer></app-footer>
+  <div id="content">
+    <router-outlet></router-outlet>
+  </div>
+</div>
